Fix: enhance loading component alignment for better user experience fix CartContent need reload when user or token change

--- a/src/pages/Register/Register.module.scss
+++ b/src/pages/Register/Register.module.scss
@@ -37,6 +37,8 @@
 }
 
 .loading {
+    align-items: center;
+    justify-content: center;
     display: flex;
 }
 
